--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.73.6",
     "react-native-date-picker": "^5.0.2",
     "react-native-element-dropdown": "^2.10.4",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-heroicons": "^4.0.0",
     "react-native-image-crop-picker": "^0.40.3",
