--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^7.6.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/material-top-tabs": "^6.6.13",
-    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/material-top-tabs": "^6.6.14",
+    "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
@@ -43,7 +43,9 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-tab-view": "^3.5.2",
-    "react-navigation": "^5.0.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-navigation": "^5.0.0",
+    "react-native-get-random-values": "~1.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
