--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Artisanet",
-    "slug": "my-app",
+    "name": "StyleZone",
+    "slug": "stylezone",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -9,20 +9,27 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ff9500"
+      "backgroundColor": "#FF385C"
     },
     "assetBundlePatterns": [
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.stylezone.app",
+      "buildNumber": "1.0.0"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ff9500"
+        "backgroundColor": "#FF385C"
       },
-      "package": "com.ArtisanCarft.ma"
+      "package": "com.stylezone.app",
+      "versionCode": 1,
+      "permissions": [
+        "CAMERA",
+        "ACCESS_FINE_LOCATION"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -31,6 +38,20 @@
       "eas": {
         "projectId": "bc50e55f-94c4-4d27-ad35-6ed2c10fef7a"
       }
-    }
+    },
+    "plugins": [
+      "expo-font"
+    ],
+    "updates": {
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/bc50e55f-94c4-4d27-ad35-6ed2c10fef7a"
+    },
+    "notification": {
+      "icon": "./assets/notification-icon.png",
+      "color": "#FF385C",
+      "iosDisplayInForeground": true,
+      "androidMode": "default"
+    },
+    "primaryColor": "#FF385C"
   }
 }
