--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-config": "^0.18.9",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^7.6.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-top-tabs": "^6.6.14",
@@ -19,7 +19,7 @@
     "axios": "^1.6.8",
     "expo": "~50.0.14",
     "expo-blur": "~12.9.2",
-    "expo-dev-client": "~3.3.11",
+    "expo-dev-client": "~3.3.12",
     "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
     "metro-config": "^0.80.9",
@@ -32,6 +32,7 @@
     "react-native-element-dropdown": "^2.10.4",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-get-random-values": "~1.8.0",
     "react-native-heroicons": "^4.0.0",
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-image-picker": "^7.1.2",
@@ -44,8 +45,7 @@
     "react-native-svg": "14.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-navigation": "^5.0.0",
-    "react-native-get-random-values": "~1.8.0"
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
