--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "expo": "~50.0.14",
     "expo-blur": "~12.9.2",
     "expo-dev-client": "~3.3.12",
-    "expo-linear-gradient": "^12.7.2",
+    "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
     "metro-config": "^0.80.9",
     "multer": "^1.4.5-lts.1",
