creation des articles

--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@expo/metro-config": "^0.18.9",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^7.6.1",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.26",
-    "axios": "^1.6.8",
+    "axios": "^1.6.2",
+    "dropdown": "^0.2.0",
     "expo": "~50.0.14",
     "expo-blur": "~12.9.2",
     "expo-dev-client": "~3.3.12",
+    "expo-image-picker": "^16.0.5",
     "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
     "metro-config": "^0.80.9",
@@ -27,15 +30,15 @@
     "my-app": "file:",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.72.6",
     "react-native-date-picker": "^5.0.2",
-    "react-native-element-dropdown": "^2.10.4",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-get-random-values": "~1.8.0",
     "react-native-heroicons": "^4.0.0",
     "react-native-image-crop-picker": "^0.40.3",
-    "react-native-image-picker": "^7.1.2",
+    "react-native-image-picker": "^7.0.2",
     "react-native-nfc-manager": "^3.14.14",
     "react-native-pager-view": "^6.3.1",
     "react-native-paper": "^5.12.3",
